Capture duraform option

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/arch-selector/arch-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/arch-selector/arch-selector.component.html
@@ -27,7 +27,7 @@
       [ngClass]="{
         selected: selectedArch && selectedArch.id === arch.id
       }"
-      *ngFor="let arch of archList"
+      *ngFor="let arch of asset.arches"
       (click)="onSelectArch(arch)"
     >
       <img
