--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -3,36 +3,40 @@
   appRemoveTag
   *ngIf="isSelected"
   [door]="door"
-  [duraformOptionTypes]="duraformOptionTypes"
   (formSubmit)="onEdit($event)"
 ></app-duraform-door-form>
-<tr
+<tbody
   class="duraform-order-step-two__cart-list-item"
   [ngClass]="{ animated: !hasAnimated }"
   [hidden]="isSelected"
   (click)="onSelect()"
 >
-  <td>{{ door.quantity }}</td>
-  <td>{{ door.height }}</td>
-  <td>{{ door.width }}</td>
-  <td>{{ door.top ? "Y" : "" }}</td>
-  <td>{{ door.bottom ? "Y" : "" }}</td>
-  <td>{{ door.left ? "Y" : "" }}</td>
-  <td>{{ door.right ? "Y" : "" }}</td>
-  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ door.duraformOption?.toString() | uppercase }}
-  </td>
-  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ door.note }}
-  </td>
-  <td style="width: 5rem;">
-    <button
-      type="button"
-      class="btn btn--secondary"
-      style="padding: 0.5rem 1rem;"
-      (click)="onRemove()"
-    >
-      <i class="fa fa-trash"></i>
-    </button>
-  </td>
-</tr>
+  <tr>
+    <td>{{ door.quantity }}</td>
+    <td>{{ door.height }}</td>
+    <td>{{ door.width }}</td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{ asset.getEdgeProfile(door.duraformEdgeProfileId).name | uppercase }}
+    </td>
+    <td>{{ door.top ? "Y" : "" }}</td>
+    <td>{{ door.bottom ? "Y" : "" }}</td>
+    <td>{{ door.left ? "Y" : "" }}</td>
+    <td>{{ door.right ? "Y" : "" }}</td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{ door.duraformOption?.toString() | uppercase }}
+    </td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{ door.note }}
+    </td>
+    <td style="width: 5rem;">
+      <button
+        type="button"
+        class="btn btn--secondary"
+        style="padding: 0.5rem 1rem;"
+        (click)="onRemove()"
+      >
+        <i class="fa fa-trash"></i>
+      </button>
+    </td>
+  </tr>
+</tbody>
