--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
@@ -1,109 +1,42 @@
-<tr
+<tbody
   class="form__order-form-group"
   appOrderForm
   [formGroup]="formGroup"
   (submit)="onSubmit()"
 >
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="quantity"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 100
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="height"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 2500
-      }"
-    />
-  </td>
-  <td>
-    <input
-      class="form__control"
-      currencyMask
-      appSelectOnFocus
-      formControlName="width"
-      [options]="{
-        align: 'center',
-        allowZero: false,
-        precision: '0',
-        decimal: '',
-        prefix: '',
-        thousands: '',
-        max: 2500
-      }"
-    />
-  </td>
-
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="top" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="bottom" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="left" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <label class="form__checkbox">
-      <input type="checkbox" formControlName="right" />
-      <span></span>
-    </label>
-  </td>
-  <td>
-    <app-duraform-option-selector
+  <tr>
+    <app-duraform-door-basic-input
+      appRemoveTag
       [formGroup]="formGroup"
-      [duraformOptionTypes]="duraformOptionTypes"
-    ></app-duraform-option-selector>
-  </td>
-  <td>
-    <input
-      type="text"
-      class="form__control"
-      style="text-align: left; width: 99%;"
-      appSelectOnFocus
-      formControlName="note"
-    />
-  </td>
-  <td style="width: 5rem;">
-    <button
-      [disabled]="formGroup.invalid"
-      type="button"
-      class="btn btn--primary"
-      style="padding: 0.5rem 1rem;"
-      (click)="onSubmit()"
-    >
-      <i class="fa fa-save"></i>
-    </button>
-  </td>
-</tr>
+    ></app-duraform-door-basic-input>
+    <app-edge-profile-form-control
+      appRemoveTag
+      [formGroup]="formGroup"
+    ></app-edge-profile-form-control>
+    <td>
+      <app-duraform-option-selector
+        [formGroup]="formGroup"
+      ></app-duraform-option-selector>
+    </td>
+    <td>
+      <input
+        type="text"
+        class="form__control"
+        style="text-align: left; width: 99%;"
+        appSelectOnFocus
+        formControlName="note"
+      />
+    </td>
+    <td style="width: 5rem;">
+      <button
+        [disabled]="formGroup.invalid"
+        type="button"
+        class="btn btn--primary"
+        style="padding: 0.5rem 1rem;"
+        (click)="onSubmit()"
+      >
+        <i class="fa fa-save"></i>
+      </button>
+    </td>
+  </tr>
+</tbody>
