--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-filter-box/duraform-filter-box.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-filter-box/duraform-filter-box.component.html
@@ -36,7 +36,7 @@
             <span>Popular</span>
           </label>
         </li>
-        <li class="serie" *ngFor="let serie of duraformSeries">
+        <li class="serie" *ngFor="let serie of asset.duraformSeries">
           <label class="form__radio-btn">
             <input
               type="radio"
