--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
@@ -12,7 +12,6 @@
         <div class="form__label">Edge Profile</div>
         <app-edge-profile-selector
           [canSelect]="!order.hasFixedEdgeProfile"
-          [edgeProfileList]="edgeProfileList"
           [selectedEdgeProfile]="order.selectedEdgeProfile"
           (selectProfile)="onSelectProfile($event)"
         ></app-edge-profile-selector>
@@ -21,7 +20,6 @@
         <div class="form__label">Arch Style</div>
         <app-arch-selector
           [canSelect]="!order.selectedDesign.hasNoArch"
-          [archList]="archList"
           [selectedArch]="order.selectedArch"
           (selectArch)="onSelectArch($event)"
         ></app-arch-selector>
@@ -46,15 +44,10 @@
       </ul>
       <ul class="tab__pages">
         <li class="page active">
-          <app-duraform-door-tab
-            [duraformOptionTypes]="duraformOptionTypes"
-          ></app-duraform-door-tab>
+          <app-duraform-door-tab></app-duraform-door-tab>
         </li>
         <li class="page">
-          <!-- <app-pantry-door-tab
-            [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
-            [wrappingOptions]="wrappingOptions"
-          ></app-pantry-door-tab> -->
+          <app-pantry-door-tab></app-pantry-door-tab>
         </li>
         <li class="page">
           <!-- <app-end-panel-tab
