--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/edge-profile-selector/edge-profile-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/edge-profile-selector/edge-profile-selector.component.html
@@ -13,7 +13,7 @@
       [ngClass]="{
         selected: selectedEdgeProfile && selectedEdgeProfile.id === profile.id
       }"
-      *ngFor="let profile of edgeProfileList"
+      *ngFor="let profile of asset.edgeProfiles"
       (click)="onSelectProfile(profile)"
     >
       <img
