--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
@@ -3,37 +3,45 @@
   appRemoveTag
   *ngIf="isSelected"
   [pantryDoor]="pantryDoor"
-  [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
   (formSubmit)="onEdit($event)"
 ></app-pantry-door-form>
-
-<tr
+<tbody
   class="duraform-order-step-two__cart-list-item"
   [ngClass]="{ animated: !hasAnimated }"
   [hidden]="isSelected"
   (click)="onSelect()"
 >
-  <td>{{ pantryDoor.quantity }}</td>
-  <td>{{ pantryDoor.height }}</td>
-  <td>{{ pantryDoor.width }}</td>
-  <td>{{ pantryDoor.chairRailHeight }}</td>
-  <td>{{ pantryDoor.chairRailType.name | uppercase }}</td>
-  <td>{{ pantryDoor.extraRailBottom }}</td>
-  <td>{{ pantryDoor.top ? "Y" : "" }}</td>
-  <td>{{ pantryDoor.bottom ? "Y" : "" }}</td>
-  <td>{{ pantryDoor.left ? "Y" : "" }}</td>
-  <td>{{ pantryDoor.right ? "Y" : "" }}</td>
-  <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
-    {{ pantryDoor.note }}
-  </td>
-  <td style="width: 5rem;">
-    <button
-      type="button"
-      class="btn btn--secondary"
-      style="padding: 0.5rem 1rem;"
-      (click)="onRemove()"
-    >
-      <i class="fa fa-trash"></i>
-    </button>
-  </td>
-</tr>
+  <tr>
+    <td>{{ pantryDoor.quantity }}</td>
+    <td>{{ pantryDoor.height }}</td>
+    <td>{{ pantryDoor.width }}</td>
+    <td>{{ pantryDoor.chairRailHeight }}</td>
+    <td>{{ pantryDoor.chairRailType.name | uppercase }}</td>
+    <td>{{ pantryDoor.extraRailBottom }}</td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{
+        asset.getEdgeProfile(pantryDoor.duraformEdgeProfileId).name | uppercase
+      }}
+    </td>
+    <td>{{ pantryDoor.top ? "Y" : "" }}</td>
+    <td>{{ pantryDoor.bottom ? "Y" : "" }}</td>
+    <td>{{ pantryDoor.left ? "Y" : "" }}</td>
+    <td>{{ pantryDoor.right ? "Y" : "" }}</td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{ pantryDoor.duraformOption?.toString() }}
+    </td>
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+      {{ pantryDoor.note }}
+    </td>
+    <td style="width: 5rem;">
+      <button
+        type="button"
+        class="btn btn--secondary"
+        style="padding: 0.5rem 1rem;"
+        (click)="onRemove()"
+      >
+        <i class="fa fa-trash"></i>
+      </button>
+    </td>
+  </tr>
+</tbody>
