--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
@@ -22,11 +22,14 @@
         Extra Rail <br />
         Bottom
       </th>
-      <th rowspan="2" style="width: 30rem;">
-        Duraform Options <br />
-        (e.g Double Sided, Fold Back)
+      <th rowspan="2" style="width: 20rem;">
+        Edge Profile
       </th>
       <th colspan="4">'X' For Square Edge</th>
+      <th rowspan="2" style="width: 35rem;">
+        Option <br />
+        (eg. No Face, Fold Back, ...)
+      </th>
       <th rowspan="2" colspan="2">Note</th>
     </tr>
     <tr>
@@ -36,13 +39,10 @@
       <th style="width: 4rem;">R</th>
     </tr>
   </thead>
-  <tbody>
-    <app-pantry-door-form
-      appRemoveTag
-      [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
-      (formSubmit)="onAddPantryDoor($event)"
-    ></app-pantry-door-form>
-  </tbody>
+  <app-pantry-door-form
+    appRemoveTag
+    (formSubmit)="onAddPantryDoor($event)"
+  ></app-pantry-door-form>
   <tbody class="table__spacer" *ngIf="order.pantryDoors.length > 0">
     <tr>
       <td></td>
@@ -57,15 +57,14 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
     </tr>
   </tbody>
-  <tbody>
-    <app-pantry-door-cart-item
-      appRemoveTag
-      *ngFor="let pantryDoor of order.pantryDoors"
-      [pantryDoor]="pantryDoor"
-      [pantryDoorChairRailTypes]="pantryDoorChairRailTypes"
-      (removePantryDoor)="onRemovePantryDoor($event)"
-    ></app-pantry-door-cart-item>
-  </tbody>
+  <app-pantry-door-cart-item
+    appRemoveTag
+    *ngFor="let pantryDoor of order.pantryDoors"
+    [pantryDoor]="pantryDoor"
+    (removePantryDoor)="onRemovePantryDoor($event)"
+  ></app-pantry-door-cart-item>
 </table>
