--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-option-selector.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-option-selector.scss
@@ -13,27 +13,30 @@
     text-align: left;
   }
 
+  .clear-btn {
+    margin-left: 0.5rem;
+  }
+
+  .container {
+    left: 50%;
+    position: absolute;
+    top: calc(100% + 0.5rem);
+    transform: translateX(-50%);
+    width: calc(100% + 2rem);
+    z-index: 99999;
+  }
+
   .type-list {
+    animation: slideInTop 0.3s ease-out;
     background-color: white;
     border: solid 1px #8c8c8c;
     border-radius: 0.3rem;
     box-shadow: 0 0 1rem rgba(black, 0.3);
     cursor: pointer;
     list-style: none;
-    left: 50%;
     padding: 0.7rem 0;
-    position: absolute;
     text-align: left;
-    top: calc(100% + 0.5rem);
-    transform: scaleY(0) translateX(-50%);
-    transform-origin: top center;
-    transition: transform 0.2s ease;
-    width: calc(100% + 2rem);
-    z-index: 99999;
-
-    &.show {
-      transform: scaleY(1) translateX(-50%);
-    }
+    transform-origin: top;
 
     & > li {
       font-weight: bold;
@@ -46,18 +49,8 @@
   }
 
   .option-form {
-    left: 50%;
-    position: absolute;
-
-    top: calc(100% + 0.5rem);
-    transform: scaleY(0) translateX(-50%);
-    transform-origin: top center;
-    transition: transform 0.2s ease;
-    width: calc(100% + 2rem);
-
-    &.show {
-      transform: scaleY(1) translateX(-50%);
-    }
+    animation: slideInTop 0.3s ease-out;
+    transform-origin: top;
 
     &__form-wrapper {
       background-color: white;
