--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_table.scss
@@ -13,9 +13,14 @@
   }
 
   &--bordered {
-    th,
-    td {
-      border: solid 1px rgba(black, 0.3);
+    tbody,
+    thead {
+      & > tr {
+        th,
+        td {
+          border: solid 1px rgba(black, 0.3);
+        }
+      }
     }
   }
 
