--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-process/duraform-process.component.html
@@ -1,4 +1,7 @@
-<div class="duraform-process">
+<div
+  class="duraform-process"
+  [ngClass]="{ 'step-two': currentDisplayStep === 2 }"
+>
   <ul>
     <li
       class="step active"
