--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_tab.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_tab.scss
@@ -59,12 +59,12 @@
   }
 
   &.scrollable {
-    height: 100%;
+    flex: 1;
     max-height: 100%;
   }
 
   &.scrollable &__pages {
-    height: 100%;
+    flex: 1;
     max-height: 100%;
     overflow-y: auto;
   }
