--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-tab/end-panel-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-tab/end-panel-tab.component.html
@@ -2,10 +2,6 @@
   <thead>
     <tr>
       <th rowspan="2" style="width: 5rem;">Qty.</th>
-      <th rowspan="2" style="width: 6rem;">
-        No. <br />
-        Shields
-      </th>
       <th rowspan="2" style="width: 9rem;">
         O/A <br />
         Height
@@ -14,34 +10,42 @@
         O/A <br />
         Width
       </th>
-
-      <th colspan="4">
+      <th rowspan="2" style="width: 6rem;">
+        No. <br />
+        Shields
+      </th>
+      <th colspan="3">
+        Rail Sizes
+      </th>
+      <th colspan="2">
         Extra Rail
       </th>
-      <th rowspan="2" style="width: 25rem;">
-        Duraform Options <br />
-        (e.g Double Sided, Fold Back)
+      <th rowspan="2" style="width: 20rem;">
+        Edge Profile
       </th>
       <th colspan="4">'X' For Square Edge</th>
+      <th rowspan="2" style="width: 35rem;">
+        Option <br />
+        (eg. No Face, Fold Back, ...)
+      </th>
       <th rowspan="2" colspan="2">Note</th>
     </tr>
     <tr>
+      <th style="width: 6rem;">Left</th>
+      <th style="width: 6rem;">Center</th>
+      <th style="width: 6rem;">Right</th>
       <th style="width: 6rem;">Top</th>
       <th style="width: 6rem;">Bottom</th>
-      <th style="width: 6rem;">Left</th>
-      <th style="width: 6rem;">Right</th>
       <th style="width: 4rem;">T</th>
       <th style="width: 4rem;">B</th>
       <th style="width: 4rem;">L</th>
       <th style="width: 4rem;">R</th>
     </tr>
   </thead>
-  <tbody>
-    <app-end-panel-form
-      appRemoveTag
-      (formSubmit)="onAddEndPanel($event)"
-    ></app-end-panel-form>
-  </tbody>
+  <app-end-panel-form
+    appRemoveTag
+    (formSubmit)="onAddEndPanel($event)"
+  ></app-end-panel-form>
 
   <tbody class="table__spacer" *ngIf="order.endPanels.length > 0">
     <tr>
@@ -60,14 +64,15 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
     </tr>
   </tbody>
-  <tbody>
-    <app-end-panel-cart-item
-      appRemoveTag
-      *ngFor="let endPanel of order.endPanels"
-      [endPanel]="endPanel"
-      (removeEndPanel)="onRemoveEndPanel($event)"
-    ></app-end-panel-cart-item>
-  </tbody>
+  <app-end-panel-cart-item
+    appRemoveTag
+    *ngFor="let endPanel of order.endPanels"
+    [endPanel]="endPanel"
+    (removeEndPanel)="onRemoveEndPanel($event)"
+  ></app-end-panel-cart-item>
 </table>
