--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_arch-selector.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_arch-selector.scss
@@ -30,7 +30,6 @@
     background-color: white;
     border: solid 1px rgba(black, 0.3);
     box-shadow: 0 0 1rem rgba($color: black, $alpha: 0.4);
-    bottom: -15rem;
     display: none;
     list-style: none;
     left: calc(100% + 4rem);
@@ -38,6 +37,7 @@
     margin-right: -$arch-gap;
     position: absolute;
     padding: 1rem 0;
+    top: -5rem;
     transform-origin: left;
     width: 80rem;
     z-index: 9;
@@ -46,12 +46,12 @@
       background-color: white;
       border-left: solid 1px rgba(black, 0.3);
       border-bottom: solid 1px rgba(black, 0.3);
-      bottom: 15rem;
       content: "";
       display: inline-block;
       height: 3rem;
       left: -1.6rem;
       position: absolute;
+      top: 5.5rem;
       transform: rotate(45deg);
       width: 3rem;
     }
