--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
@@ -1,31 +1,30 @@
 app-duraform-order-step-two {
   flex: 1;
   max-height: 100%;
-  overflow-y: auto;
 }
 
 .duraform-order-step-two {
   display: flex;
+  flex-direction: column;
   height: 100%;
-  padding-top: 1rem;
+  max-height: 100%;
 
-  .col-left,
-  .col-right {
-    height: 100%;
-    max-height: 100%;
-  }
-
-  .col-left {
-    margin-right: 2rem;
-    width: 40rem;
+  .section-one {
+    display: flex;
+    margin-bottom: 1rem;
 
     .info-box {
-      margin-bottom: 1rem;
+      margin-right: 1rem;
+      min-width: 40rem;
     }
   }
 
-  .col-right {
+  .section-two {
+    display: flex;
+    flex-direction: column;
     flex: 1;
+    max-height: 100%;
+    overflow: auto;
   }
 
   &__cart-list-item {
@@ -55,24 +54,33 @@ app-duraform-order-step-two {
     }
   }
 
+  &__go-back-btn,
   &__check-out-btn {
     border: none;
     border-radius: 0.5rem;
-    background-color: $blue-primary;
     color: white;
     cursor: pointer;
     display: block;
     font-weight: 700;
-    font-size: 2rem;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 4rem;
-    padding: 1.5rem;
-    width: 70%;
+    font-size: 1.6rem;
+    min-width: 15rem;
+    padding: 0.8rem;
 
     &:disabled {
       cursor: not-allowed;
       opacity: 0.5;
     }
+
+    &:not(:first-child) {
+      margin-top: 1rem;
+    }
+  }
+
+  &__go-back-btn {
+    background-color: rgba($color: black, $alpha: 0.8);
+  }
+
+  &__check-out-btn {
+    background-color: $blue-primary;
   }
 }
