--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-process.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-process.scss
@@ -5,7 +5,15 @@
   background-color: white;
   margin-bottom: 1rem;
   padding: 0.7rem 1.5rem;
+  position: relative;
+  left: 0;
+  transition: all 0.4s ease;
   width: max-content;
+
+  &.step-two {
+    position: fixed;
+    left: 79%;
+  }
 
   & > ul {
     list-style: none;
