--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/5-page/_duraform-page.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/5-page/_duraform-page.scss
@@ -1,8 +1,10 @@
 .duraform-page {
   @include no-user-select;
   display: flex;
+  flex: 1;
   flex-direction: column;
   height: 100%;
+  max-height: 100%;
 
   .filter-box {
     margin-bottom: 2rem;
